[package]
edition = "2021"
name = "custom-difficulties-playground"
version = "0.1.0"

[dependencies]
fs-err = "2.11.0"
miette = { version = "7.2.0", features = ["derive", "fancy"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry", "std"] }
